[package]
name = "my_package"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "2.0.0"
casper-types = "2.0.0"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.16.0", default-features = false }

[[bin]]
name = "contract"
path = "bin/contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "trade_nft"
path = "bin/trade_nft.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
